--- a/app/styles/components/player-metrics.scss
+++ b/app/styles/components/player-metrics.scss
@@ -42,7 +42,7 @@
   &.progress {
     .up-triangle {
       position: absolute;
-      top: -25px;
+      top: -24px;
       left: 50%;
       width: 100%;
       transform: translateX(-50%);
